k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uni-academy
spec:
  type: LoadBalancer
  selector:
    app: uni-academy
  ports:
  - port: 80
    targetPort: 3000
