k8s/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uni-academy
  labels:
    name: uni-academy
spec:
  ingressClassName: kong
  rules:
  - host: dev.uni-academy.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uni-academy
            port: 
              number: 80
